--- a/Pizzeria Statica/Views/Pizza/Index.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Home Page";
     Layout = "_Layout";
 }
+@model List<Pizza>
 
 <!doctype html>
 <html lang="en">
@@ -16,8 +17,14 @@
      
     @* MAIN *@
     <main>
+        <div class="container mt-4">
+            <button type="button" class="btn btn-primary">
+                <a class="text-decoration-none text-reset" href="@Url.Action("Create","Pizza")">Crea una pizza</a>
+            </button>
+        </div>
+
         <div class="container text-center mt-4">
-            <div class="row mt-3">
+            <div class="row mt-3 gy-5">
                 
                 @foreach (Pizza pizza in Model)
                 {
