--- a/Pizzeria Statica/Views/Shared/_Footer.cshtml
+++ b/Pizzeria Statica/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer>
-    <div class="card text-center mt-4">
+    <div class="card text-center">
         <div class="card-header">
             Ringraziamenti
         </div>
