--- a/Pizzeria Statica/Views/Pizza/Create.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Create.cshtml
@@ -2,35 +2,57 @@
     Layout = "_Layout";
 }
 
-@model Pizza
+@model PizzaFormModel
 
-<div class="container mt-5">
-    <form asp-controller="Pizza" asp-action="Create" method="post">
-        @Html.AntiForgeryToken()
-        <div class="mb-3">
-            <label asp-for="Nome" class="form-label">Nome</label>
-            <input asp-for="Nome" type="text" class="form-control" id="Name">
-            <span asp-validation-for="Nome" class="text-danger"></span>
-        </div>
+<link rel="stylesheet" href="~/css/CreateStyle.css" />
 
-        <div class="mb-3">
-            <label asp-for="Descrizione" class="form-label">Descrizione</label>
-            <input asp-for="Descrizione" type="text" class="form-control" id="Descrizione">
-            <span asp-validation-for="Descrizione" class="text-danger"></span>
-        </div>
+<div class="container-form">
+    <div class="inside-container">
+        <form asp-controller="Pizza" asp-action="Create" method="post">
+            @Html.AntiForgeryToken()
+            <div class="mb-3">
+                <label asp-for="Pizza.Nome" class="label">Nome</label>
+                <input asp-for="Pizza.Nome" type="text" class="form-control" id="Name">
+                <span asp-validation-for="Pizza.Nome" class="text-danger"></span>
+            </div>
 
-        <div class="mb-3">
-            <label asp-for="Prezzo" class="form-label">Prezzo</label>
-            <input asp-for="Prezzo" type="text" class="form-control" id="Prezzo">
-            <span asp-validation-for="Prezzo" class="text-danger"></span>
-        </div>
+            <div class="mb-3">
+                <strong>Categoria:</strong>
+                <select asp-for="Pizza.IdCategoria" rows="10" class="d-block w-100">
+                    <option value=""></option>
+                    @foreach (Categoria categoria in Model.Categorie)
+                    {
+                        @if (Model.Pizza.IdCategoria == categoria.Id)
+                        {
+                            <option value="@categoria.Id" selected>@categoria.Name</option>
+                        }
+                        else
+                        {
+                            <option value="@categoria.Id">@categoria.Name</option>
+                        }
+                    }
+                </select>
+            </div>
 
-        <div class="mb-3">
-            <label asp-for="Foto" class="form-label">Foto</label>
-            <input asp-for="Foto" type="text" class="form-control" id="Foto">
-            <span asp-validation-for="Foto" class="text-danger"></span>
-        </div>
+            <div class="mb-3">
+                <label asp-for="Pizza.Descrizione" class="label">Descrizione</label>
+                <input asp-for="Pizza.Descrizione" type="text" class="form-control" id="Descrizione">
+                <span asp-validation-for="Pizza.Descrizione" class="text-danger"></span>
+            </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+            <div class="mb-3">
+                <label asp-for="Pizza.Prezzo" class="label">Prezzo</label>
+                <input asp-for="Pizza.Prezzo" type="text" class="form-control" id="Prezzo">
+                <span asp-validation-for="Pizza.Prezzo" class="text-danger"></span>
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="Pizza.Foto" class="label">Foto</label>
+                <input asp-for="Pizza.Foto" type="text" class="form-control" id="Foto">
+                <span asp-validation-for="Pizza.Foto" class="text-danger"></span>
+            </div>
+
+            <button type="submit" class="button">Submit</button>
+        </form>
+    </div>
 </div>
