--- a/Pizzeria Statica/Views/Pizza/Index.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Index.cshtml
@@ -11,34 +11,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/IndexStyle.css"  />
   </head>
   <body>
      
     @* MAIN *@
     <main>
         <div class="container mt-4">
-            <button type="button" class="btn btn-primary">
-                <a class="text-decoration-none text-reset" href="@Url.Action("Create","Pizza")">Crea una pizza</a>
+            <button type="button" class="button-create">
+                <a class="link-button-create" href="@Url.Action("Create","Pizza")"><b>Crea una pizza</b></a>
             </button>
         </div>
 
-        <div class="container text-center mt-4">
+        <div class="container text-center mt-4 mb-4">
             <div class="row mt-3 gy-5">
                 
                 @foreach (Pizza pizza in Model)
                 {
                    <div class="col-4">
-                      <div class="card" style="width: 18rem;">
-                         <div class="card-body">
-                                   <h5 class="card-title">@pizza.Nome</h5>
-                                   <p class="card-text">@pizza.Descrizione</p>
-                                   <p class="card-text">@pizza.Prezzo</p>
-                                <button type="button" class="btn btn-primary">
-                                    <a class="text-decoration-none text-reset" href="@Url.Action("Details","Pizza", new{id=pizza.Id})">Dettagli</a>
-                                </button>
-                         </div>
-                         <img src="@pizza.Foto" class="card-img-top" alt="...">
+                      <div class="card-pizza" style="width: 18rem;">
+
+                             <div class="nome-pizza">
+                                 <h3>@pizza.Nome</h3>
+                             </div>
+                             <div class="container-img-pizza">
+                                  <img src="@pizza.Foto" class="card-img" alt="...">
+                             </div>
+                             <div class="descrizione-pizza">
+                                  <p><b>@pizza.Descrizione</b></p>
+                             </div>
+                             <div class="prezzo-pizza">
+                                  <p>@pizza.Prezzo€</p>
+                             </div>
+                             <div>
+                                  <button type="button" class="button">
+                                      <a class="link-button" href="@Url.Action("Details","Pizza", new{id=pizza.Id})">Dettagli</a>
+                                  </button>
+                             </div>
+                          
+                        
                       </div>
                    </div>
                 }
