--- a/Pizzeria Statica/Views/Shared/_Header.cshtml
+++ b/Pizzeria Statica/Views/Shared/_Header.cshtml
@@ -1,27 +1,15 @@
-﻿
+﻿<link rel="stylesheet" href="~/css/_HeaderStyle.css" />
+
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">PIZZERIA PORTAMI VIA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Menù</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Dove ci troviamo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contatti</a>
-                    </li>
-                </ul>
-            </div>
+    <nav>
+        <div>
+            <h2>PIZZERIA PORTAMI VIA</h2>
+        </div>
+        <div class="link-nav">
+            <a class="link" href="#">Home</a>
+            <a class="link" href="#">Chi siamo</a>
+            <a class="link" href="#">Contatti</a>
+            <a class="link" href="#">Dove siamo</a>
         </div>
     </nav>
 </header>
