--- a/Pizzeria Statica/Views/Pizza/Update.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Update.cshtml
@@ -1,33 +1,50 @@
 ﻿@{
     Layout = "_Layout";
 }
-@model Pizza
+@model PizzaFormModel
 
 <div class="container mt-5">
     <form asp-controller="Pizza" asp-action="Update" method="post">
         @Html.AntiForgeryToken()
         <div class="mb-3">
-            <label asp-for="Nome" class="form-label">Nome</label>
-            <input asp-for="Nome" type="text" class="form-control" id="Name">
-            <span asp-validation-for="Nome" class="text-danger"></span>
+            <label asp-for="Pizza.Nome" class="form-label">Nome</label>
+            <input asp-for="Pizza.Nome" type="text" class="form-control" id="Name">
+            <span asp-validation-for="Pizza.Nome" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Descrizione" class="form-label">Descrizione</label>
-            <input asp-for="Descrizione" type="text" class="form-control" id="Descrizione">
-            <span asp-validation-for="Descrizione" class="text-danger"></span>
+            <select asp-for="Pizza.categoriaId" rows="10" class="d-block w-100">
+                <option value=""></option>
+                @foreach (Categoria categoria in Model.Categorie)
+                {
+                    @if (Model.Pizza.categoriaId == categoria.Id)
+                    {
+                        <option value="@categoria.Id" selected>@categoria.Name</option>
+                    }
+                    else
+                    {
+                        <option value="@categoria.Id">@categoria.Name</option>
+                    }
+                }
+            </select>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Prezzo" class="form-label">Prezzo</label>
-            <input asp-for="Prezzo" type="text" class="form-control" id="Prezzo">
-            <span asp-validation-for="Prezzo" class="text-danger"></span>
+            <label asp-for="Pizza.Descrizione" class="form-label">Descrizione</label>
+            <input asp-for="Pizza.Descrizione" type="text" class="form-control" id="Descrizione">
+            <span asp-validation-for="Pizza.Descrizione" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Foto" class="form-label">Foto</label>
-            <input asp-for="Foto" type="text" class="form-control" id="Foto">
-            <span asp-validation-for="Foto" class="text-danger"></span>
+            <label asp-for="Pizza.Prezzo" class="form-label">Prezzo</label>
+            <input asp-for="Pizza.Prezzo" type="text" class="form-control" id="Prezzo">
+            <span asp-validation-for="Pizza.Prezzo" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="Pizza.Foto" class="form-label">Foto</label>
+            <input asp-for="Pizza.Foto" type="text" class="form-control" id="Foto">
+            <span asp-validation-for="Pizza.Foto" class="text-danger"></span>
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
