relazione di Categoria completata

--- a/Pizzeria Statica/Views/Pizza/Create.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Create.cshtml
@@ -52,7 +52,9 @@
                 <span asp-validation-for="Pizza.Foto" class="text-danger"></span>
             </div>
 
-            <button type="submit" class="button">Submit</button>
+            <div class="container-button">
+                <button type="submit" class="button">Invia</button>
+            </div>
         </form>
     </div>
-</div>
+</div>8
