--- a/Pizzeria Statica/Views/Pizza/Index.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Index.cshtml
@@ -40,16 +40,16 @@
                              <div class="descrizione-pizza">
                                   <p><b>@pizza.Descrizione</b></p>
                              </div>
-                             @* <div class="dettagli">
-                                @if (pizza.categoriaId != null)
+                             <div class="dettagli">
+                                @if (pizza.Categoria != null)
                                 {
                                     <span>@pizza.Categoria.Name</span>
                                 }
                                 else
                                 {
-                                    <span>Nessuna</span>
+                                    <span>Nessuna categoria</span>
                                 }
-                             </div>   *@
+                             </div>  
                              <div class="dettagli">
                                   <p>@pizza.Prezzo€</p>
                              </div>
