--- a/Pizzeria Statica/wwwroot/css/IndexStyle.css
+++ b/Pizzeria Statica/wwwroot/css/IndexStyle.css
@@ -18,7 +18,7 @@ body {
 
 .card-pizza{
     min-height: 150px;
-    min-width: 330px;
+    min-width: 350px;
     background-color: white;
     border-radius: 20px;
     padding: 15px;
@@ -46,6 +46,12 @@ img{
 .dettagli {
     font-family: cursive;
     font-size: 18px;
+}
+
+.ingredienti {
+    font-size: 12px;
+    font-family: cursive;
+    margin-bottom: 10px;
 }
 
 .button {
