installazione dei pecchetti e configurazione

--- a/Pizzeria Statica/Views/Shared/_Header.cshtml
+++ b/Pizzeria Statica/Views/Shared/_Header.cshtml
@@ -10,6 +10,8 @@
             <a class="link" href="#">Chi siamo</a>
             <a class="link" href="#">Contatti</a>
             <a class="link" href="#">Dove siamo</a>
+
+            <partial name="_LoginPartial" />
         </div>
     </nav>
 </header>
