--- a/Pizzeria Statica/Views/Pizza/Index.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Index.cshtml
@@ -32,7 +32,7 @@
                       <div class="card-pizza" style="width: 18rem;">
 
                              <div class="nome-pizza">
-                                 <h4>@pizza.Nome</h4>
+                                <h4><b>@pizza.Nome</b></h4>
                              </div>
 
                              <div class="container-img-pizza">
